# lidar_area_monitor

./: .gitignore  LICENSE  README.md
ros2_lam_interfaces/: CMakeLists.txt  package.xml
ros2_lam_interfaces/install/: local_setup.sh  setup.sh
ros2_lam_interfaces/install/ros2_lam_interfaces/include/ros2_lam_interfaces/ros2_lam_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  (+3 more)
ros2_lam_interfaces/install/ros2_lam_interfaces/share/ros2_lam_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_lam_interfaces/install/ros2_lam_interfaces/share/ros2_lam_interfaces/cmake/: export_ros2_lam_interfaces__rosidl_generator_cppExport.cmake  export_ros2_lam_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_ros2_lam_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_ros2_lam_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  ros2_lam_interfaces__rosidl_typesupport_cExport-noconfig.cmake  ros2_lam_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  ros2_lam_interfaces__rosidl_typesupport_cppExport.cmake  ros2_lam_interfaces__rosidl_typesupport_introspection_cExport.cmake  ros2_lam_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  ros2_lam_interfaces__rosidl_typesupport_introspection_cppExport.cmake
ros2_lam_interfaces/install/ros2_lam_interfaces/share/ros2_lam_interfaces/srv/: SetExclusionArea.json
ros2_lam_interfaces/log/: latest_build
ros2_lam_interfaces/srv/: SetExclusionArea.srv
(+7 files in other folders)
